--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         app:hintTextAppearance="@style/FloatingLabelStyle"
         app:passwordToggleEnabled="false">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/et_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
         app:hintTextAppearance="@style/FloatingLabelStyle"
         app:passwordToggleEnabled="true">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
