--- a/app/src/main/res/layout/dialog_fragment_manage_group.xml
+++ b/app/src/main/res/layout/dialog_fragment_manage_group.xml
@@ -25,7 +25,7 @@
         app:hintTextAppearance="@style/FloatingLabelStyle"
         app:passwordToggleEnabled="false">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/et_group_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -46,7 +46,7 @@
         app:hintTextAppearance="@style/FloatingLabelStyle"
         app:passwordToggleEnabled="true">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/et_group_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
