--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
             android:hint="@string/username"
             android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
-            android:singleLine="true"
+            android:minLines="1"
             android:textColor="@android:color/black" />
     </android.support.design.widget.TextInputLayout>
 
@@ -46,7 +46,7 @@
             android:hint="@string/password"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
-            android:singleLine="true"
+            android:minLines="1"
             android:textColor="@android:color/black" />
 
     </android.support.design.widget.TextInputLayout>
