--- a/app/src/main/res/layout/dialog_fragment_manage_group.xml
+++ b/app/src/main/res/layout/dialog_fragment_manage_group.xml
@@ -33,7 +33,7 @@
             android:imeOptions="actionNext"
             android:inputType="textCapSentences"
             android:maxLines="1"
-            android:singleLine="true"
+            android:minLines="1"
             android:textSize="@dimen/_11sdp" />
     </android.support.design.widget.TextInputLayout>
 
@@ -53,7 +53,7 @@
             android:hint="@string/group_description"
             android:imeOptions="actionDone"
             android:maxLines="1"
-            android:singleLine="true"
+            android:minLines="1"
             android:textSize="@dimen/_11sdp" />
     </android.support.design.widget.TextInputLayout>
 
